option java_package = "com.doteyplay.game.message.proto";
option java_outer_classname = "NpcProBuf";
import "item.proto";
message PNpc{
   required int64 roleId=1;//玩家id
   required string npcName=2;//玩家名字
   required int32 level=3;//等级
   repeated PItem equipList=4;//装备列表
   required bool selected=5;//是否被选择
   repeated int32 skillIdList=6;//技能列表
   required int32 quality=7;//品质
   required int32 star=8;//星级
   required int64 npcId=9;//id
   required int32 spriteId=10;//原型精灵id
   required int32 exp=11;//经验
}